@@ -1,12 +1,7 @@
 <configure
   xmlns="http://namespaces.zope.org/zope"
-  xmlns:monkey="http://namespaces.plone.org/monkey"
-  xmlns:zcml="http://namespaces.zope.org/zcml"
   xmlns:z3c="http://namespaces.zope.org/z3c"
   i18n_domain="eea">
-
-  <include package="collective.monkeypatcher" />
-  <include package="collective.monkeypatcher" file="meta.zcml" />
 
   <adapter factory=".dexteritywidget.RelatedItemsFieldWidget" />
   <adapter factory=".dexteritywidget.RelatedItemsFieldDataConverter" />
