@@ -3,6 +3,8 @@ Changelog
 
 11.5-dev0 - (unreleased)
 ---------------------------
+* Feature: Added dexterity widget for relatedItems
+  [iulianpetchesi #121889]
 * Change: added notoc class to related content header as it
   shouldn't appear in the body toc portlet
   [ichim-david refs #119674]
